--- a/color.css
+++ b/color.css
@@ -27,13 +27,14 @@ fieldset {
 }
 
 legend {
-    font-size: 1.4rem;
+    font-size: clamp(1rem, 0.5rem + 1.667vw, 2rem);
     font-weight: bold;
     color: #568EA3;
     margin-bottom: .3rem;
 }
 
 label {
+    font-size: clamp(0.875rem, 0.75rem + 0.417vw, 1.125rem);
     font-weight: 500;
 }
 
@@ -50,7 +51,6 @@ textarea {
     font-size: 1rem;
     color: #31241a;
 }
-
 input[type="radio"],
 input[type="checkbox"] {
     margin-right: 0.5rem;
@@ -58,6 +58,7 @@ input[type="checkbox"] {
 
 p {
     margin-top: 1.2rem;
+    font-size: clamp(0.875rem, 0.75rem + 0.417vw, 1.125rem);
     font-weight: 600;
 }
 
@@ -80,9 +81,12 @@ select {
   margin-bottom: 1rem;
   border: 1px solid #ccc;
   border-radius: 4px;
-  font-size: 1rem;
+  font-size: clamp(0.875rem, 0.75rem + 0.417vw, 1.125rem);
   color: #31241a;
   background-color: white;
+}
+select option{
+     font-weight: normal;
 }
 input[type="button"] {
     background-color: #2292A4;
